--- a/LiqRisk_v0.2.ipynb
+++ b/LiqRisk_v0.2.ipynb
@@ -664,7 +664,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "funds_AR_coef.iloc[:,45:58].plot()"
+    "funds_AR_betas.iloc[:,45:58].plot()"
    ]
   },
   {
@@ -674,7 +674,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "funds_AR_coef.iloc[:,0:30].plot()"
+    "funds_AR_betas.iloc[:,0:30].plot()"
    ]
   },
   {
