--- a/LiqRisk_v0.3.ipynb
+++ b/LiqRisk_v0.3.ipynb
@@ -647,8 +647,8 @@
     "                result = mod.fit()\n",
     "                funds_AR_const.loc[current_period,col_name] = result.params[0]\n",
     "                funds_AR_betas.loc[current_period,col_name] = result.params[1]\n",
-    "                #funds_AR_const_pvalue.loc[current_period,col_name] = result.pvalues[0]\n",
-    "                #funds_AR_betas_pvalue.loc[current_period,col_name] = result.pvalues[1]              \n",
+    "                funds_AR_const_pvalue.loc[current_period,col_name] = result.pvalues[0]\n",
+    "                funds_AR_betas_pvalue.loc[current_period,col_name] = result.pvalues[1]              \n",
     "            else:\n",
     "                funds_AR_const.loc[current_period,col_name] = float('NaN')\n",
     "                funds_AR_betas.loc[current_period,col_name] = float('NaN')\n",
